@@ -148,6 +148,7 @@
 -recolor '0.9,0,0,0,0.9,0,0,0,1.2'
 -recolor '.22,.72,.07,.22,.72,.07,.22,.72,.07'
 -density 75x75 -resample 50x50
+-region 640x480+400+500 -blur 0x6
 -resize 10%
 -resize 50%
 -resize 150%
