@@ -40,6 +40,12 @@
 <p>2023-03-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/identity.c (ReadIdentityImage): Limit 'order' to a
+maximum of 40, and change to unsigned type in order to avoid
+undefined arithmetic overflow.</p></li>
+<li><p>magick/command.c (MogrifyImage): Handle the case where image and
+region_image are the same.  Addresses SourceForge issue #688 &quot;Heap
+UAF in gm (magick/command.c:11427)&quot;.</p></li>
 <li><p>coders/pict.c (WritePICTImage): Fix use of
 MagickFreeResourceLimitedMemory() on non-managed memory. Addresses
 SourceForge issue #687 &quot;Heap Overflow in gm
